fixed button alignment

--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
   overflow: hidden;
 }
 
+section {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
 button {
   background-color: white;
   /* border: 6px; */
